--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,9 +46,13 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   shared_preferences: ^2.2.3
   isar: ^3.1.0+1
+  isar_flutter_libs:
+    git:
+      url: https://github.com/MrLittleWhite/isar_flutter_libs.git
   path_provider: ^2.1.4
   intl: ^0.19.0
   get_it: ^8.2.0
+
   connectivity_plus: ^7.0.0
   flutter_secure_storage: ^9.2.4
   flutter_dotenv: ^6.0.0
@@ -58,6 +62,9 @@ dependencies:
   shimmer: ^3.0.0
   flutter_spinkit: ^5.2.2
   pin_code_fields: ^8.0.1
+  firebase_core: ^4.3.0
+  firebase_auth: ^6.1.3
+  cloud_firestore: ^6.1.1
 
 
 dev_dependencies:
